crates/ruff_linter/src/rules/flake8_builtins/snapshots/ruff_linter__rules__flake8_builtins__tests__A002_A002.py_builtins_ignorelist.snap
---
source: crates/ruff_linter/src/rules/flake8_builtins/mod.rs
---
A002.py:1:11: A002 (builtin-argument-shadowing) Function argument `str` is shadowing a Python builtin
  |
1 | def func1(str, /, type, *complex, Exception, **getattr):
  |           ^^^ A002 (builtin-argument-shadowing)
2 |     pass
  |

A002.py:1:19: A002 (builtin-argument-shadowing) Function argument `type` is shadowing a Python builtin
  |
1 | def func1(str, /, type, *complex, Exception, **getattr):
  |                   ^^^^ A002 (builtin-argument-shadowing)
2 |     pass
  |

A002.py:1:26: A002 (builtin-argument-shadowing) Function argument `complex` is shadowing a Python builtin
  |
1 | def func1(str, /, type, *complex, Exception, **getattr):
  |                          ^^^^^^^ A002 (builtin-argument-shadowing)
2 |     pass
  |

A002.py:1:35: A002 (builtin-argument-shadowing) Function argument `Exception` is shadowing a Python builtin
  |
1 | def func1(str, /, type, *complex, Exception, **getattr):
  |                                   ^^^^^^^^^ A002 (builtin-argument-shadowing)
2 |     pass
  |

A002.py:1:48: A002 (builtin-argument-shadowing) Function argument `getattr` is shadowing a Python builtin
  |
1 | def func1(str, /, type, *complex, Exception, **getattr):
  |                                                ^^^^^^^ A002 (builtin-argument-shadowing)
2 |     pass
  |

A002.py:5:17: A002 (builtin-argument-shadowing) Function argument `bytes` is shadowing a Python builtin
  |
5 | async def func2(bytes):
  |                 ^^^^^ A002 (builtin-argument-shadowing)
6 |     pass
  |
