crates/ruff_linter/src/rules/flake8_builtins/snapshots/ruff_linter__rules__flake8_builtins__tests__A003_A003.py.snap
---
source: crates/ruff_linter/src/rules/flake8_builtins/mod.rs
---
A003.py:17:31: A003 (builtin-attribute-shadowing) Python builtin is shadowed by method `str` from line 14
   |
15 |         pass
16 |
17 |     def method_usage(self) -> str:
   |                               ^^^ A003 (builtin-attribute-shadowing)
18 |         pass
   |

A003.py:20:34: A003 (builtin-attribute-shadowing) Python builtin is shadowed by class attribute `id` from line 3
   |
18 |         pass
19 |
20 |     def attribute_usage(self) -> id:
   |                                  ^^ A003 (builtin-attribute-shadowing)
21 |         pass
   |
