crates/ruff_linter/src/rules/flake8_builtins/snapshots/ruff_linter__rules__flake8_builtins__tests__A004_A004.py.snap
---
source: crates/ruff_linter/src/rules/flake8_builtins/mod.rs
---
A004.py:1:16: A004 (builtin-import-shadowing) Import `sum` is shadowing a Python builtin
  |
1 | import some as sum
  |                ^^^ A004 (builtin-import-shadowing)
2 | import float
3 | from some import other as int
  |

A004.py:2:8: A004 (builtin-import-shadowing) Import `float` is shadowing a Python builtin
  |
1 | import some as sum
2 | import float
  |        ^^^^^ A004 (builtin-import-shadowing)
3 | from some import other as int
4 | from some import input, exec
  |

A004.py:3:27: A004 (builtin-import-shadowing) Import `int` is shadowing a Python builtin
  |
1 | import some as sum
2 | import float
3 | from some import other as int
  |                           ^^^ A004 (builtin-import-shadowing)
4 | from some import input, exec
5 | from directory import new as dir
  |

A004.py:4:18: A004 (builtin-import-shadowing) Import `input` is shadowing a Python builtin
  |
2 | import float
3 | from some import other as int
4 | from some import input, exec
  |                  ^^^^^ A004 (builtin-import-shadowing)
5 | from directory import new as dir
  |

A004.py:4:25: A004 (builtin-import-shadowing) Import `exec` is shadowing a Python builtin
  |
2 | import float
3 | from some import other as int
4 | from some import input, exec
  |                         ^^^^ A004 (builtin-import-shadowing)
5 | from directory import new as dir
  |

A004.py:5:30: A004 (builtin-import-shadowing) Import `dir` is shadowing a Python builtin
  |
3 | from some import other as int
4 | from some import input, exec
5 | from directory import new as dir
  |                              ^^^ A004 (builtin-import-shadowing)
6 |
7 | # See: https://github.com/astral-sh/ruff/issues/13037
  |

A004.py:11:32: A004 (builtin-import-shadowing) Import `BaseExceptionGroup` is shadowing a Python builtin
   |
10 | if sys.version_info < (3, 11):
11 |     from exceptiongroup import BaseExceptionGroup, ExceptionGroup
   |                                ^^^^^^^^^^^^^^^^^^ A004 (builtin-import-shadowing)
   |

A004.py:11:52: A004 (builtin-import-shadowing) Import `ExceptionGroup` is shadowing a Python builtin
   |
10 | if sys.version_info < (3, 11):
11 |     from exceptiongroup import BaseExceptionGroup, ExceptionGroup
   |                                                    ^^^^^^^^^^^^^^ A004 (builtin-import-shadowing)
   |
